--- a/src/components/ImageSlider/image.module.css
+++ b/src/components/ImageSlider/image.module.css
@@ -39,3 +39,17 @@
   0% { left: -50%; }
   100% { left: 100%; }
 }
+.sliderTrack {
+  display: flex;
+  width: 100%;
+  animation: scroll 35s linear infinite;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
