--- a/src/app/(homePage)/menu/menu.module.css
+++ b/src/app/(homePage)/menu/menu.module.css
@@ -19,6 +19,7 @@
   gap: 1rem; /* khoảng cách giữa 2 filter */
   flex: 0 0 25%; 
   max-width: 500px;
+  height: fit-content; /* chiều cao vừa đủ nội dung */
 }
 
 .menuColumn {
